Add validation schema and default values for login and signup forms; improve layout and translations

--- a/src/UI/CenteredContainer.module.scss
+++ b/src/UI/CenteredContainer.module.scss
@@ -3,6 +3,7 @@
 .container {
   @include mixins.flexCenter(column);
   width: 100%;
+  overflow: auto;
 
   &.top {
     justify-content: flex-start;
