--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -141,11 +141,19 @@
 }
 
 .deadOverlay {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  color: theme.$color-error;
+  @include mixins.flexCenter;
 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: theme.$color-dark-primary;
+  border: 2px solid theme.$color-dark-secondary;
+  border-radius: theme.$border-radius;
+
+  color: theme.$color-error;
+  font-size: 5rem;
   font-weight: 600;
   z-index: 10;
 }
