feat: enhance NightMode functionality with animations; add VideoPlaceholder component for improved user experience

--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -54,6 +54,7 @@
   object-fit: cover;
   height: 100%;
   width: auto;
+  transition: opacity 0.3s ease-out;
 
   &.widthProportion {
     width: 100%;
