--- a/src/components/MediaControls/MediaControls.module.scss
+++ b/src/components/MediaControls/MediaControls.module.scss
@@ -11,6 +11,12 @@
   border-radius: theme.$border-radius;
   background-color: transparent;
   z-index: 15;
+
+  &.small {
+    right: 0;
+    column-gap: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
 
 .controlButton {
