--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -19,6 +19,13 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  border: 3px solid transparent;
+  transition: border-color 0.3s ease;
+
+  &.speaking {
+    border-color: theme.$color-info;
+    box-shadow: 0 0 8px rgba(theme.$color-info, 0.5);
+  }
 
   &.active {
     grid-column: 2 / 5;
@@ -153,8 +160,4 @@
   font-size: 5rem;
   font-weight: 600;
   z-index: 10;
-}
-
-.gmOverlay {
-  outline: 3px solid gold;
 }
