--- a/src/UI/RoleIcon/RoleIcon.module.scss
+++ b/src/UI/RoleIcon/RoleIcon.module.scss
@@ -1,9 +1,19 @@
 .img {
   max-width: 100%;
   max-height: 100%;
-  width: 30px;
   height: auto;
   filter: invert(1);
-
   cursor: pointer;
+}
+
+.s {
+  width: 30px;
+}
+
+.m {
+  width: 40px;
+}
+
+.l {
+  width: 50px;
 }
