--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -161,3 +161,10 @@
   font-weight: 600;
   z-index: 10;
 }
+
+.gmIconContainer {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+}
