--- a/src/components/GameInfoSection/GameInfoSection.module.scss
+++ b/src/components/GameInfoSection/GameInfoSection.module.scss
@@ -3,7 +3,6 @@
 .container {
   @include mixins.flexCenter;
   height: 100%;
-  padding: 10px 20px;
 }
 
 .playerPanel {
@@ -14,13 +13,15 @@
 }
 
 .roleCardContainer {
-  position: relative;
+  position: fixed;
 }
 
 .fakeCard {
   position: fixed;
   top: 0;
-  left: 40%;
+  left: 50%;
+
+  transform: translateX(-50%);
 
   pointer-events: none;
   z-index: 1000000;
