--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -3,12 +3,12 @@
 
 @keyframes videoSlide {
   from {
-    top: 40px;
-    right: 85%;
+    top: 0;
+    left: 0;
   }
   to {
-    top: 28%;
-    right: 20px;
+    top: 182px;
+    left: calc(100vw - 250px);
   }
 }
 
@@ -19,7 +19,6 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border: 3px solid transparent;
   transition: border-color 0.3s ease;
 
   &.speaking {
@@ -35,10 +34,14 @@
 
 .myVideoContainer {
   position: fixed;
-  top: 40px;
-  right: 85%;
+
   width: 200px;
   height: 150px;
+  box-shadow:
+    0 4px 12px rgba(0, 0, 0, 0.4),
+    0 2px 6px rgba(0, 0, 0, 0.3);
+  border-radius: theme.$border-radius;
+  will-change: top, left;
 
   z-index: 99;
   cursor: grab;
@@ -47,10 +50,7 @@
     font-size: 1.4rem;
   }
 
-  &.myVideoActive {
-    @include mixins.flexCenter;
-    animation: videoSlide 0.3s forwards;
-  }
+  animation: videoSlide 0.3s ease-out forwards;
 }
 
 .dragging {
