--- a/src/pages/Game/GamePage.module.scss
+++ b/src/pages/Game/GamePage.module.scss
@@ -5,16 +5,9 @@
   display: grid;
   width: 100%;
   grid-template-columns: 1fr 23%;
-  grid-template-rows: calc(100vh - 87px);
-  gap: 50px;
-
+  grid-template-rows: calc(100vh - 40px);
+  gap: 12px;
   font-size: 1.8rem;
-}
-
-.videoWrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
 }
 
 .hidden {
@@ -31,19 +24,30 @@
 
 .rightContainer {
   @include mixins.flex(column, flex-start, center);
+  gap: 12px;
+  height: 100%;
+  overflow: hidden;
 }
 
 .asideSection {
+  @include mixins.rounded(theme.$border-radius-big);
   width: 100%;
-  height: 20%;
-  border-bottom: theme.$color-accent-primary 1px solid;
+  background-color: theme.$color-dark-secondary;
+  padding: 16px;
+  flex-shrink: 0;
 }
 
-.personalInfo,
-.voteList {
+.personalInfo {
+  height: auto;
+  min-height: 150px;
 }
 
 .chatSection {
+  @include mixins.rounded(theme.$border-radius-big);
   width: 100%;
-  height: 60%;
+  flex: 1;
+  min-height: 0;
+  background-color: theme.$color-dark-secondary;
+  padding: 16px;
+  overflow: hidden;
 }
