--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -16,6 +16,7 @@
   @include mixins.flexCenter;
   position: relative;
   border-radius: theme.$border-radius;
+  border: 3px solid transparent;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -41,6 +42,7 @@
     0 4px 12px rgba(0, 0, 0, 0.4),
     0 2px 6px rgba(0, 0, 0, 0.3);
   border-radius: theme.$border-radius;
+  border: none;
   will-change: top, left;
 
   z-index: 99;
