--- a/src/components/SoundIndicator/SoundIndicator.module.scss
+++ b/src/components/SoundIndicator/SoundIndicator.module.scss
@@ -20,29 +20,63 @@
   background: theme.$color-info;
   border-radius: 3px;
   box-shadow: 0 0 6px rgba(theme.$color-info, 0.8);
-  animation: soundWave 0.6s ease-in-out infinite;
 
   &:nth-child(1) {
+    animation: soundWave1 1.1s ease-in-out infinite;
     animation-delay: 0s;
   }
 
   &:nth-child(2) {
-    animation-delay: 0.15s;
+    animation: soundWave2 1.4s ease-in-out infinite;
+    animation-delay: 0.2s;
   }
 
   &:nth-child(3) {
-    animation-delay: 0.3s;
+    animation: soundWave3 1.25s ease-in-out infinite;
+    animation-delay: 0.5s;
   }
 }
 
-@keyframes soundWave {
+@keyframes soundWave1 {
+  0%,
+  100% {
+    transform: scaleY(0.3);
+    opacity: 0.6;
+  }
+  50% {
+    transform: scaleY(1.3);
+    opacity: 1;
+  }
+}
+
+@keyframes soundWave2 {
+  0%,
+  100% {
+    transform: scaleY(0.5);
+    opacity: 0.7;
+  }
+  45% {
+    transform: scaleY(1.1);
+    opacity: 1;
+  }
+  90% {
+    transform: scaleY(0.8);
+    opacity: 0.85;
+  }
+}
+
+@keyframes soundWave3 {
   0%,
   100% {
     transform: scaleY(0.4);
-    opacity: 0.7;
+    opacity: 0.65;
   }
-  50% {
-    transform: scaleY(1.2);
+  30% {
+    transform: scaleY(0.9);
+    opacity: 0.9;
+  }
+  60% {
+    transform: scaleY(1.4);
     opacity: 1;
   }
 }
