--- a/src/UI/Button/Button.module.scss
+++ b/src/UI/Button/Button.module.scss
@@ -4,6 +4,7 @@
 .button {
   display: flex;
   align-items: center;
+  justify-content: center;
   border-radius: theme.$border-radius-big;
   transition: background-color, opacity;
   transition-duration: 250ms;
