--- a/src/components/VoteFlow/VoteFlow.module.scss
+++ b/src/components/VoteFlow/VoteFlow.module.scss
@@ -11,15 +11,18 @@
 
 .voteList {
   @include mixins.flex(column, flex-start, flex-start);
+  @include mixins.customScrollbar();
   column-gap: 1rem;
   position: absolute;
   top: 10px;
-  left: 5px;
+  left: 45px;
   padding: 0.5rem;
   background-color: rgba(theme.$color-dark-primary, 50%);
   border-radius: theme.$border-radius;
   color: theme.$color-text-tertiary;
   font-size: 1.4rem;
+  max-height: 95px;
+  overflow-y: auto;
 
   z-index: 10;
 }
