--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -53,6 +53,13 @@
   }
 
   animation: videoSlide 0.3s ease-out forwards;
+
+  &.active {
+    position: static;
+    width: 100%;
+    height: 100%;
+    cursor: default;
+  }
 }
 
 .dragging {
