--- a/src/components/GamesList/GamesList.module.scss
+++ b/src/components/GamesList/GamesList.module.scss
@@ -130,3 +130,9 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
+.lockIcon {
+  color: $color-text-secondary;
+  font-size: 14px;
+  margin-left: 4px;
+}
